--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <center><h1>ARDUINO</h1></center>
-    <center><h3>HISTORIA</h3></center>
-    <center><h1>snippet</h1></center>
-    <center><h2>metodo snippet</h2></center>
+    <center><h1>GITHUB</h1></center>
+    <center><H1>git status = "mirar el estado de la estacion"</H1></center>
+    <center><h1>git add . = "anade todos los archivos"</h1></center>
+    <center><h1>git commit -m "Primer Viaje" = "Crea un registro historico(Trackeo)"</h1></center>
+    <center><h1>git push origin main = "Sube el archivo al servidor"</h1></center>
 </body>
 </html>
