--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <center><h1>git add . = "anade todos los archivos"</h1></center>
     <center><h1>git commit -m "Primer Viaje" = "Crea un registro historico(Trackeo)"</h1></center>
     <center><h1>git push origin main = "Sube el archivo al servidor"</h1></center>
+    <center><h1>git pull origin main = "Actualiza el archivo modificado"</h1></center>
 </body>
 </html>
